styles/popupstyle.css
body{
    min-height: 700px;
}

#loader h1 {
    text-align: center;
    font-size: 80px;
    max-width: 500px;
}

@media screen and (max-width: 480px){
    #loader h1 {
        font-size: 60px;
    }
}

.pop-up {
    position: absolute;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
    width: 100vw;
    min-height: 700px;
    transition: opacity 0.8s ease;
    display: none;
    opacity: 0;
    z-index: 10;
}

.square-pop .pop-main {
    width: 400px;
    height: 400px;
    justify-content: center;
}

.bckg-mask {
    z-index: -1;
    position: absolute;
    height: inherit;
    width: inherit;
    min-height: 1200px;
    background-color: rgba(0,0,0,0.3);
}

.pop-main {
    background-color: rgb(151, 0, 33);
    border: 4px double rgb(250, 175, 156);
    box-shadow: 0 0 50px 5px rgba(0,0,0,0.2);
    display: flex;
    flex-direction: column;
    align-items: center;
}

.pop-center{
    justify-content: center;
}

.pop-height-lock{
    height: 400px;
}

.pop-x:hover {
    cursor: pointer;
}

.pop-title {
    font-family: Lobster,fantasy;
    color: rgb(250, 175, 156);
    text-shadow: 2px 2px 2px rgba(0,0,0,0.3);
    font-size: 40px;
}

.fire-form {
    margin-top: 40px;
    display: flex;
    flex-direction: column;
    width: 250px;
}

.textBox {
    font-size: 20px;
    font-family: Raleway,sans-serif;
}

.submit-button {
    font-size: 20px;
    font-family: Lobster,fantasy;
    margin: 10px;
    box-shadow: 1px 1px 1px rgba(0,0,0,0.3);
    border-radius: 5% / 30%;
    transition: background-color 0.35s ease, color 0.35s ease;
    color: rgb(151, 0, 33);
    background-color: rgb(250, 175, 156);
    border: none;
}

.submit-button:hover{
    color: rgb(44, 44, 46);
    background-color: whitesmoke;
}

.content-slider {
    display: flex;
    flex-direction: column;
}

.full-pop .pop-main {
    width: 96vw;
    max-width: 600px;
    height: 97vh;
    min-height: 700px;
}

.fire-err {
    color: rgb(252, 212, 80);
    font-family: Raleway,sans-serif;
    font-size: 16px;
    width: 250px;
    text-align: center;
}

.pop-x {
    position: absolute;
    font-family: Mali,sans-serif;
    font-size: 40px;
    color: rgb(250, 175, 156);
    transition: color 0.35s ease, text-shadow 0.35s ease;
}

.pop-x:hover{
    text-shadow: 0 0 20px whitesmoke;
    color: whitesmoke;
}

.fire-button{
    background-color: rgb(151, 0, 33);
    color: rgb(250, 175, 156);
    border-radius: 10% / 20%;
    margin-left: 10px;
    border: none;
    box-shadow: 1px 1px 2px rgba(0,0,0,0.2);
    font-family: Poppins;
    transition: color 0.35s ease, background-color 0.35s ease;
}

.fire-button:hover{
    color: rgb(44, 44, 46);
    background-color: whitesmoke;
}

.full-pop .pop-x {
    margin-left: 10px;
    align-self: flex-start;
}

.square-pop .pop-x {
    transform: translate(-175px,-170px);
}

.full-pop .pop-title {
    margin-top: 50px;
}

.cont-control {
    font-family: Poppins,sans-serif;
    font-size: 70px;
    color: rgb(151, 0, 33);
    background-color: rgb(250, 175, 156);
    border-radius: 10% / 5%;
    width: 50px;
    height: 60px;
    margin: 5px;
    box-shadow: 1px 1px 3px rgba(0,0,0,0.3);
    display: flex;
    justify-content: center;
    align-items: center;
}

.cont-control:hover{
    cursor: pointer;
}

.previous {
    position: absolute;
    align-self: flex-start;
    margin-left: 5px;
    transform: translateY(50vh);
}

.next {
    align-self: flex-end;
    margin-right: 5px;
    transform: translateY(calc(50vh - 138px));
}

#recipe-pop .next{
    transform: translateY(calc(50vh - 110px));
}

/*!CHANGE IF THEATER POSTION STARTS WORKING*/
.movie .cont-map{
    display: none;
}
.movie .map-button{
    display: none;
}

.pop-subtitle, .cont-title, .movie-theater {
    color: rgb(250, 175, 156);
    font-family: Lobster,sans-serif;
    font-size: 20px;
}

.pop-subtitle{
    color: whitesmoke;
}

.cont-wrap{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    transition: opacity 0.5s ease;
    display: none;
    opacity: 0;
}

.starting-content{
    display: flex;
    opacity: 1;
}

.cont-num{
    font-family: Lobster,sans-serif;
    font-size: 25px;
    color: rgb(250, 175, 156);
}

.cont-title{
    font-size: 30px;
}

.cont-img {
    width: 220px;
    height: 220px;
    background-size: cover;
    background-position: center;
    margin: 10px;
    z-index: 1;
    transition: opacity 0.5s ease;
    user-select: none;
}

.cont-img.transparent {
    opacity: 0;
}

.cont-link {
    font-family: Lobster,sans-serif;
    font-size: 30px;
    color: rgb(250, 175, 156);
    text-decoration: underline;
    transition: color .35s ease;
}

.cont-link:hover{
    color: whitesmoke;
}

.map-button {
    color: rgb(151, 0, 33);
    background-color: rgb(250, 175, 156);
    border-radius: 10% / 20%;
    padding: 5px;
    font-family: Poppins,sans-serif;
    font-size: 20px;
    transition: color 0.35s ease, backround-color 0.35s ease;
}

.cont-map.up {
    z-index: 2;
}

.map-button:hover{
    cursor: pointer;
    color: rgb(44, 44, 46);
    background-color: whitesmoke;
}

.cont-map {
    height: 200px;
    width: 200px;
    margin-top: 5px;
    position: absolute !important;
    transform: translateY(-27px);
    transition: opacity 0.5s ease;
    opacity: 0;
}

.restaurant-rating {
    color: gold;
    font-size: 40px;
    letter-spacing: 2px;
}

@media screen and (max-width: 768px){
    .square-pop .pop-main {
        width: 300px;
        height: 300px;
    }
    .square-pop .pop-x {
        transform: translate(-125px,-122px);
    }
}

#TESTBUTTON {
    transform: translateY(500px);
}

